Refine CSS styles and fix minor layout issues

--- a/style.css
+++ b/style.css
@@ -1973,7 +1973,7 @@ footer > p:last-child {
     }
 
     section {
-        padding: 60px 15px;
+        padding: 59px 15px;
     }
     
     .contact {
@@ -1998,7 +1998,7 @@ footer > p:last-child {
     }
     
     .footer-cotent-box h3 {
-        font-size: 1.3rem;
+        font-size: 1.2rem;
     }
     .d2c_navbar {
         padding: 12px 0;
